--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,14 +6,16 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
-25    <TextView
-        android:background="@drawable/boder"
+25
 
+    <TextView
         android:id="@+id/textView"
+
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="56dp"
-        android:layout_marginTop="68dp"
+        android:layout_marginTop="20dp"
+        android:background="@drawable/boder"
         android:text="Size"
         android:textSize="30dp"
         app:layout_constraintStart_toStartOf="parent"
@@ -179,10 +181,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
 
-        android:layout_marginBottom="56dp"
+        android:layout_marginTop="20dp"
         android:text="Place your oder"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="@+id/textView4" />
+        app:layout_constraintStart_toStartOf="@+id/textView4"
+        app:layout_constraintTop_toBottomOf="@+id/checkBox17" />
 
     <RadioGroup
         android:id="@+id/radioGroup"
